<resources>
    <string name="app_name">Billbook</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="title_home">HOME</string>
    <string name="title_dashboard">ACCOUNT</string>
    <string name="title_notifications">NOTIFICATIONS</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_shop_registration">ShopRegistrationActivity</string>
    <string name="title_activity_order_detail">OrderDetailActivity</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_Address">Shop Address</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_mobile">Owner Mobile</string>
    <string name="owner_email">Owner Email</string>
    <string name="title_activity_employee_list">EmployeeListActivity</string>
    <string name="title_activity_shop_branch">ShopBranchActivity</string>
    <string name="title_activity_item_register">ItemRegisterActivity</string>
    <string name="title_activity_employee_register">EmployeeRegisterActivity</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_mobile">Employee Mobile</string>
    <string name="role">Role</string>
    <string name="submit">submit</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_mobile">Customer Mobile</string>
    <string name="mobile">Mobile</string>
    <string name="login">Login</string>
    <string name="title_activity_otp">OTPActivity</string>
    <string name="otp">OTP</string>
    <string name="otp_read_msg">Enter the OTP below in case if we fail to detect sms automatically</string>
    <string name="relax_msg">Sit back and Relax! While We verify your mobile Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="in_percent">In Percent</string>
    <string name="fix_amount">Fix Amount</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="add_discount">Add Discount</string>
    <string name="customer_details">Customer Details</string>
    <string name="user_details">User Details</string>
    <string name="cancel">cancel</string>
    <string name="apply">Apply</string>
    <string name="title_activity_add_branch">AddBranchActivity</string>
    <string name="title_activity_stock_list">StockListActivity</string>
    <string name="branch_name">Branch Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="locality">Locality</string>
    <string name="add_branch">Add Branch</string>
    <string name="stock_date">Stock Date</string>
    <string name="total_items">Total Items</string>
    <string name="item_list">Item List</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="selling_price">Selling Price</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="title_activity_employee_sales">EmployeeSalesActivity</string>
    <string name="title_activity_shop_sales">ShopSalesActivity</string>
    <string name="register_shop">Register Shop</string>
    <string name="owner_details">OWNER DETAILS</string>
    <string name="shop_address">SHOP ADDRESS</string>
    <string name="area">Area</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="title_activity_shop_details">ShopDetailsActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>

</resources>
