<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.AddBranchActivity"
    tools:showIn="@layout/activity_add_branch">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_16dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputBranchName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextBranchName"
                style="@style/modifiedEditText"
                android:fontFamily="@font/titillium_web"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/branch_name"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCity"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextCity"
                style="@style/modifiedEditText"
                android:fontFamily="@font/titillium_web"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/city"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputState"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextState"
                style="@style/modifiedEditText"
                android:fontFamily="@font/titillium_web"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/state"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLocality"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/editTextLocality"
                style="@style/modifiedEditText"
                android:fontFamily="@font/titillium_web"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/locality"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="@string/add_branch"
            android:fontFamily="@font/titillium_web_bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>