<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.ShopDetailsActivity"
    tools:showIn="@layout/activity_shop_details">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_16dp"
        android:paddingBottom="@dimen/padding_16dp">
        <LinearLayout
            style="@style/linearParent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_minus5dp"
                android:layout_marginRight="@dimen/margin_minus5dp"
                android:elevation="@dimen/margin_5dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputShopName"
                    style="@style/parent">
                    <EditText
                        android:id="@+id/editTextShopName"
                        style="@style/modifiedEditText"
                        android:layout_marginLeft="@dimen/padding_16dp"
                        android:layout_marginRight="@dimen/padding_16dp"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/titillium_web"
                        android:maxLines="1"
                        android:text="Westarn Garments"
                        android:hint="@string/shop_name"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="@dimen/padding_10_dp"
                android:paddingLeft="@dimen/padding_10_dp"
                android:fontFamily="@font/titillium_web_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/owner_details"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_minus5dp"
                android:layout_marginRight="@dimen/margin_minus5dp"
                android:elevation="@dimen/margin_5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_16dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputOwnerName"
                        style="@style/parent">
                        <EditText
                            android:id="@+id/editTextOwnerName"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="Pankaj Gurunule"
                            android:hint="@string/owner_name"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputOwnerMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextOwnerMobile"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="8805505580"
                            android:hint="@string/owner_mobile"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="pankaj.gurnule@gmail.com"
                            android:hint="@string/owner_email"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="@dimen/padding_10_dp"
                android:paddingLeft="@dimen/padding_10_dp"
                android:fontFamily="@font/titillium_web_bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/shop_address"/>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_minus5dp"
                android:layout_marginRight="@dimen/margin_minus5dp"
                android:elevation="@dimen/margin_5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/padding_16dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent">
                        <EditText

                            style="@style/modifiedEditText"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="kali mata mandir"
                            android:hint="@string/area"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="Sai chowk"
                            android:hint="@string/landmark"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/margin_5dp"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:fontFamily="@font/titillium_web"
                                android:maxLines="1"
                                android:text="Chandrpur"
                                android:hint="@string/city"/>

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginLeft="@dimen/margin_5dp"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:fontFamily="@font/titillium_web"
                                android:maxLines="1"
                                android:text="442401"
                                android:hint="@string/pincode"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/titillium_web"
                            android:maxLines="1"
                            android:text="Maharashtra"
                            android:hint="@string/state"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:text="@string/register"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/titillium_web_bold"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>